# vsguard-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_mcp.py
data/: __init__.py
data/asvs/: __init__.py  authentication.yaml  cryptography.yaml  session_management.yaml  validation.yaml
data/rules/: __init__.py  authentication.yaml  cryptography.yaml  injection.yaml  session.yaml
src/: __init__.py  config.py  models.py  server.py
src/asvs/: __init__.py  loader.py  mapper.py  requirements.py
src/fixes/: __init__.py  generator.py  templates.py
src/scanners/: __init__.py  base.py  semgrep_scanner.py
src/utils/: __init__.py  formatters.py
tests/: __init__.py  conftest.py  test_asvs_loader.py  test_asvs_mapper.py  test_fix_generator.py  test_formatters.py
tests/fixtures/: secure_code.py  vulnerable_code.py
