[tool.poetry]
name = "vsguard-mcp"
version = "0.2.0"
description = "VSGuard MCP - Vulnerability Scanner & Guard for AI Coding Agents | OWASP ASVS Security Analysis"
authors = ["VSGuard Contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "^2.0.0"
semgrep = "^1.50.0"
bandit = "^1.7.5"
detect-secrets = "^1.4.0"
pyyaml = "^6.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
mypy = "^1.7.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

